@@ -1,0 +1,20 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <artifactId>spring-osgi-integration-test-bundles</artifactId>
+        <groupId>org.springframework.osgi</groupId>
+        <version>1.0.2-SNAPSHOT</version>
+    </parent>
+    
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.springframework.osgi</groupId>
+    <artifactId>org.springframework.osgi.iandt.proxy.creator</artifactId>
+    <packaging>jar</packaging>
+    <name>Spring OSGi Test Bundle: Spring Proxy Creator bundle</name>
+    <description>An OSGi bundle that creates proxies internally and is updated</description>
+    <url>http://www.springframework.org/osgi</url>
+
+</project>
+
